フレーム画像のUX改善。角度を変えても拡大できる、二本指で動かせる、ピンチして最後の指が一本になったときにフレームの画像を動かないようにする

--- a/bAmi/Base.lproj/Main.storyboard
+++ b/bAmi/Base.lproj/Main.storyboard
@@ -17,30 +17,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OUo-6P-vfz">
-                                <rect key="frame" x="40" y="820" width="24" height="22"/>
-                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <rect key="frame" x="40" y="800" width="24" height="22"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="photo" catalog="system"/>
                                 <connections>
                                     <action selector="toAlbumButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ivb-xZ-yKq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXH-cJ-4dy">
-                                <rect key="frame" x="354" y="820" width="20" height="22"/>
-                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <rect key="frame" x="354" y="800" width="20" height="22"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="trash" catalog="system"/>
                                 <connections>
                                     <action selector="trashButton_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ffY-uL-OcA"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nem-KI-Ipc">
-                                <rect key="frame" x="38" y="720" width="338" height="31"/>
-                                <color key="tintColor" systemColor="systemRedColor"/>
-                                <connections>
-                                    <action selector="changeSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="9SW-Ed-PTm"/>
-                                </connections>
-                            </slider>
-                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zHG-02-82g">
-                                <rect key="frame" x="5" y="49" width="404" height="601"/>
+                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zHG-02-82g">
+                                <rect key="frame" x="5" y="157" width="404" height="272"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="PLu-hv-RNO" appends="YES" id="CLa-7g-dQ6"/>
@@ -49,39 +43,45 @@
                                 </connections>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7n4-FH-c1t">
-                                <rect key="frame" x="194.5" y="820" width="25" height="22"/>
-                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <rect key="frame" x="194.5" y="800" width="25" height="22"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="camera" catalog="system"/>
                                 <connections>
                                     <action selector="cameraButton_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uFP-04-i6E"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nem-KI-Ipc">
+                                <rect key="frame" x="38" y="84" width="338" height="31"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="changeSlider:forEvent:" destination="BYZ-38-t0r" eventType="valueChanged" id="9WE-hZ-bhs"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OUo-6P-vfz" secondAttribute="bottom" constant="20" id="Gcr-30-h2i"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nem-KI-Ipc" secondAttribute="trailing" constant="40" id="NAo-aD-aeh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DXH-cJ-4dy" secondAttribute="bottom" constant="20" id="NKp-T5-0JU"/>
-                            <constraint firstItem="7n4-FH-c1t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OqQ-gV-tRr"/>
-                            <constraint firstItem="OUo-6P-vfz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Pmq-vM-rd2"/>
-                            <constraint firstItem="nem-KI-Ipc" firstAttribute="top" secondItem="zHG-02-82g" secondAttribute="bottom" constant="70" id="Tv1-75-zBT"/>
-                            <constraint firstItem="OUo-6P-vfz" firstAttribute="top" secondItem="nem-KI-Ipc" secondAttribute="bottom" constant="70" id="UG6-Ce-XRJ"/>
-                            <constraint firstItem="nem-KI-Ipc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Zed-Ng-TGP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7n4-FH-c1t" secondAttribute="bottom" constant="20" id="fsw-VJ-ptQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zHG-02-82g" secondAttribute="trailing" constant="5" id="n1j-BQ-adY"/>
-                            <constraint firstItem="zHG-02-82g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="wU9-6i-XzN"/>
-                            <constraint firstItem="zHG-02-82g" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="xcp-ha-Pmd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DXH-cJ-4dy" secondAttribute="trailing" constant="40" id="yEd-b8-59I"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DXH-cJ-4dy" secondAttribute="bottom" constant="40" id="6qz-7Q-bQv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7n4-FH-c1t" secondAttribute="bottom" constant="40" id="E8V-Lz-OCN"/>
+                            <constraint firstItem="nem-KI-Ipc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="EYT-Hp-1Vy"/>
+                            <constraint firstItem="7n4-FH-c1t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GMb-R8-SfE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DXH-cJ-4dy" secondAttribute="trailing" constant="40" id="MZB-lH-S01"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OUo-6P-vfz" secondAttribute="bottom" constant="40" id="Qje-1F-a2M"/>
+                            <constraint firstItem="nem-KI-Ipc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Qxe-zt-BOD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nem-KI-Ipc" secondAttribute="trailing" constant="40" id="TcF-tH-45m"/>
+                            <constraint firstItem="OUo-6P-vfz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="bOC-8U-sPF"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cameraButton" destination="7n4-FH-c1t" id="EzX-NK-SWh"/>
+                        <outlet property="changeSlider" destination="nem-KI-Ipc" id="0ze-vv-Dwn"/>
                         <outlet property="imageView" destination="zHG-02-82g" id="sjx-lK-sHN"/>
+                        <outlet property="pinchRecognizer" destination="pt3-Y3-PsW" id="IRE-zq-tuz"/>
+                        <outlet property="rotationRecognizer" destination="vLm-X7-YKG" id="ZOg-Bp-wi9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="PLu-hv-RNO">
+                <panGestureRecognizer minimumNumberOfTouches="2" id="PLu-hv-RNO">
                     <connections>
                         <action selector="drapping:" destination="BYZ-38-t0r" id="0Lc-em-06B"/>
                     </connections>
@@ -97,7 +97,7 @@
                     </connections>
                 </pinchGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
+            <point key="canvasLocation" x="-1088.4057971014493" y="146.65178571428569"/>
         </scene>
     </scenes>
     <resources>
@@ -106,9 +106,6 @@
         <image name="trash" catalog="system" width="121" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
